[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "click>=8.3.1",
    "cryptography>=46.0.3",
    "eth-account>=0.13.7",
    "eth-keys>=0.7.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "hexbytes>=1.3.1",
    "networkx>=3.5",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.4.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.14.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.3",
    "socketio>=0.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "streamlit-autorefresh>=1.0.1",
    "web3>=7.14.0",
]
